commit translated contents

--- a/docs/core/compatibility/2.2-3.0.md
+++ b/docs/core/compatibility/2.2-3.0.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, versione da 2,2 a 3,0-.NET Core
 description: Elenca le modifiche di rilievo dalla versione 2,2 alla versione 3,0 di .NET Core, ASP.NET Core e EF Core.
 ms.date: 01/10/2020
-ms.openlocfilehash: 6bafe914691b2644c094f928e86ba046836ef758
-ms.sourcegitcommit: 7e2128d4a4c45b4274bea3b8e5760d4694569ca1
+ms.openlocfilehash: 67b3a4325b5c0958895af94dedcdd795afd2b296
+ms.sourcegitcommit: ed3f926b6cdd372037bbcc214dc8f08a70366390
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 01/14/2020
-ms.locfileid: "75937489"
+ms.lasthandoff: 01/16/2020
+ms.locfileid: "76116618"
 ---
 # <a name="breaking-changes-for-migration-from-version-22-to-30"></a>Modifiche di rilievo per la migrazione dalla versione 2,2 alla 3,0
 
@@ -15,7 +15,58 @@ Se si esegue la migrazione dalla versione 2,2 alla versione 3,0 di .NET Core, AS
 
 ## <a name="aspnet-core"></a>ASP.NET Core
 
-[!INCLUDE[obsolete Antiforgery, CORS, Diagnostics, MVC, and Routing APIs removed](~/includes/core-changes/aspnetcore/3.0/obsolete-apis-removed.md)]
+- [Sono state rimosse le API obsolete, CORS, Diagnostics, MVC e routing](#obsolete-antiforgery-cors-diagnostics-mvc-and-routing-apis-removed)
+- [Autenticazione: deprecazione di Google +](#authentication-google-deprecated-and-replaced)
+- [Autenticazione: Proprietà HttpContext. Authentication rimossa](#authentication-httpcontextauthentication-property-removed)
+- [Autenticazione: tipi Newtonsoft. JSON sostituiti](#authentication-newtonsoftjson-types-replaced)
+- [Autenticazione: OAuthHandler ExchangeCodeAsync firma modificata](#authentication-oauthhandler-exchangecodeasync-signature-changed)
+- [Autorizzazione: l'overload di AddAuthorization è stato spostato in un assembly diverso](#authorization-addauthorization-overload-moved-to-different-assembly)
+- [Autorizzazione: IAllowAnonymous rimosso da AuthorizationFilterContext. filters](#authorization-iallowanonymous-removed-from-authorizationfiltercontextfilters)
+- [Autorizzazione: le implementazioni di IAuthorizationPolicyProvider richiedono un nuovo metodo](#authorization-iauthorizationpolicyprovider-implementations-require-new-method)
+- [Caching: la proprietà CompactOnMemoryPressure è stata rimossa](#caching-compactonmemorypressure-property-removed)
+- [Caching: Microsoft. Extensions. Caching. SqlServer usa il nuovo pacchetto SqlClient](#caching-microsoftextensionscachingsqlserver-uses-new-sqlclient-package)
+- [Caching: i tipi di "pubternal" di ResponseCaching sono stati modificati in Internal](#caching-responsecaching-pubternal-types-changed-to-internal)
+- [Protezione dei dati: dataprotection. AzureStorage usa le nuove API di archiviazione di Azure](#data-protection-dataprotectionazurestorage-uses-new-azure-storage-apis)
+- [Hosting: AspNetCoreModule V1 rimosso dal bundle di hosting di Windows](#hosting-aspnetcoremodule-v1-removed-from-windows-hosting-bundle)
+- [Hosting: l'host generico limita l'inserimento del costruttore di avvio](#hosting-generic-host-restricts-startup-constructor-injection)
+- [Hosting: reindirizzamento HTTPS abilitato per le app out-of-process di IIS](#hosting-https-redirection-enabled-for-iis-out-of-process-apps)
+- [Hosting: tipi IHostingEnvironment e IApplicationLifetime sostituiti](#hosting-ihostingenvironment-and-iapplicationlifetime-types-marked-obsolete-and-replaced)
+- [Hosting: ObjectPoolProvider rimosso dalle dipendenze WebHostBuilder](#hosting-objectpoolprovider-removed-from-webhostbuilder-dependencies)
+- [HTTP: DefaultHttpContext estensibilità rimosso](#http-defaulthttpcontext-extensibility-removed)
+- [HTTP: HeaderNames campi modificati in ReadOnly statico](#http-headernames-constants-changed-to-static-readonly)
+- [HTTP: modifiche dell'infrastruttura del corpo della risposta](#http-response-body-infrastructure-changes)
+- [HTTP: alcuni cookie navigava sullostesso sito valori predefiniti modificati](#http-some-cookie-samesite-defaults-changed-to-none)
+- [HTTP: i/o sincrono disabilitato per impostazione predefinita](#http-synchronous-io-disabled-in-all-servers)
+- [Identità: overload del metodo AddDefaultUI rimosso](#identity-adddefaultui-method-overload-removed)
+- [Identità: modifica della versione bootstrap dell'interfaccia utente](#identity-default-bootstrap-version-of-ui-changed)
+- [Identity: SignInAsync genera un'eccezione per l'identità non autenticata](#identity-signinasync-throws-exception-for-unauthenticated-identity)
+- [Identity: il costruttore SignInManager accetta il nuovo parametro](#identity-signinmanager-constructor-accepts-new-parameter)
+- [Identità: l'interfaccia utente usa la funzionalità statica di asset Web](#identity-ui-uses-static-web-assets-feature)
+- [Gheppio: adapter di connessione rimossi](#kestrel-connection-adapters-removed)
+- [Gheppio: assembly HTTPS vuoto rimosso](#kestrel-empty-https-assembly-removed)
+- [Gheppio: intestazioni del trailer della richiesta spostate in una nuova raccolta](#kestrel-request-trailer-headers-moved-to-new-collection)
+- [Gheppio: modifiche ai livelli di astrazione del trasporto](#kestrel-transport-abstractions-removed-and-made-public)
+- [Localizzazione: API contrassegnate come obsolete](#localization-resourcemanagerwithculturestringlocalizer-and-withculture-marked-obsolete)
+- [Registrazione: classe DebugLogger creata internamente](#logging-debuglogger-class-made-internal)
+- [MVC: suffisso asincrono azione controller rimosso](#mvc-async-suffix-trimmed-from-controller-action-names)
+- [MVC: JsonResult spostato in Microsoft. AspNetCore. Mvc. Core](#mvc-jsonresult-moved-to-microsoftaspnetcoremvccore)
+- [MVC: strumento di precompilazione deprecato](#mvc-precompilation-tool-deprecated)
+- [MVC: tipi modificati in Internal](#mvc-pubternal-types-changed-to-internal)
+- [MVC: shim di compatibilità API Web rimosso](#mvc-web-api-compatibility-shim-removed)
+- [Razor: la compilazione di runtime è stata spostata in un pacchetto](#razor-runtime-compilation-moved-to-a-package)
+- [Stato sessione: API obsolete rimosse](#session-state-obsolete-apis-removed)
+- [Framework condiviso: rimozione di assembly da Microsoft. AspNetCore. app](#shared-framework-assemblies-removed-from-microsoftaspnetcoreapp)
+- [Framework condiviso: Microsoft. AspNetCore. All rimosso](#shared-framework-removed-microsoftaspnetcoreall)
+- [SignalR: HandshakeProtocol. SuccessHandshakeData sostituito](#signalr-handshakeprotocolsuccesshandshakedata-replaced)
+- [SignalR: Metodi HubConnection rimossi](#signalr-hubconnection-resetsendping-and-resettimeout-methods-removed)
+- [SignalR: costruttori HubConnectionContext modificati](#signalr-hubconnectioncontext-constructors-changed)
+- [SignalR: modifica del nome del pacchetto client JavaScript](#signalr-javascript-client-package-name-changed)
+- [SignalR: API obsolete](#signalr-usesignalr-and-useconnections-methods-marked-obsolete)
+- [Spa: SpaServices e NodeServices contrassegnati come obsoleti](#spas-spaservices-and-nodeservices-marked-obsolete)
+- [Spa: modifica predefinita di fallback del logger della console SpaServices e NodeServices](#spas-spaservices-and-nodeservices-no-longer-fall-back-to-console-logger)
+- [Framework di destinazione: .NET Framework non supportato](#target-framework-net-framework-support-dropped)
+
+[!INCLUDE[Obsolete Antiforgery, CORS, Diagnostics, MVC, and Routing APIs removed](~/includes/core-changes/aspnetcore/3.0/obsolete-apis-removed.md)]
 
 ***
 
@@ -213,7 +264,23 @@ Se si esegue la migrazione dalla versione 2,2 alla versione 3,0 di .NET Core, AS
 
 [!INCLUDE[Target framework: .NET Framework not supported](~/includes/core-changes/aspnetcore/3.0/targetfx-netfx-tfm-support.md)]
 
+***
+
 ## <a name="corefx"></a>CoreFx
+
+- [API che segnalano ora la versione del prodotto e non la versione del file](#apis-that-report-version-now-report-product-and-not-file-version)
+- [Le istanze EncoderFallbackBuffer personalizzate non possono eseguire il fallback in modo ricorsivo](#custom-encoderfallbackbuffer-instances-cannot-fall-back-recursively)
+- [Modifiche al comportamento di analisi e formattazione a virgola mobile](#floating-point-formatting-and-parsing-behavior-changed)
+- [Le operazioni di analisi a virgola mobile non hanno più esito negativo o generano OverflowException](#floating-point-parsing-operations-no-longer-fail-or-throw-an-overflowexception)
+- [InvalidAsynchronousStateException spostato in un altro assembly](#invalidasynchronousstateexception-moved-to-another-assembly)
+- [NET Core 3,0 segue le procedure consigliate Unicode per la sostituzione di sequenze di byte UTF-8 in formato non valido](#net-core-30-follows-unicode-best-practices-when-replacing-ill-formed-utf-8-byte-sequences)
+- [TypeDescriptionProviderAttribute spostato in un altro assembly](#typedescriptionproviderattribute-moved-to-another-assembly)
+- [Tipo di eccezione del serializzatore JSON modificato da Jsonexception a NotSupportedException](#json-serializer-exception-type-changed-from-jsonexception-to-notsupportedexception)
+- [Modifica della semantica di (String) null in Utf8JsonWriter](#change-in-semantics-of-stringnull-in-utf8jsonwriter)
+- [I metodi JsonEncodedText. Encode hanno un argomento JavaScriptEncoder aggiuntivo](#jsonencodedtextencode-methods-have-an-additional-javascriptencoder-argument)
+- [Firma di JsonFactoryConverter. CreateConverter modificata](#jsonfactoryconvertercreateconverter-signature-changed)
+- [ZipArchiveEntry non gestisce più gli archivi con dimensioni di voce incoerenti](#ziparchiveentry-no-longer-handles-archives-with-inconsistent-entry-sizes)
+- [Modifiche all'API jsonelement](#jsonelement-api-changes)
 
 [!INCLUDE[APIs that report version now report product and not file version](~/includes/core-changes/corefx/3.0/version-information-changes.md)]
 
@@ -247,7 +314,7 @@ Se si esegue la migrazione dalla versione 2,2 alla versione 3,0 di .NET Core, AS
 
 ***
 
-[!INCLUDE[Json serializer exception type changed from JsonException to NotSupportedException](~/includes/core-changes/corefx/3.0/serializer-throws-notsupportedexception.md)]
+[!INCLUDE[JSON serializer exception type changed from JsonException to NotSupportedException](~/includes/core-changes/corefx/3.0/serializer-throws-notsupportedexception.md)]
 
 ***
 
@@ -265,7 +332,14 @@ Se si esegue la migrazione dalla versione 2,2 alla versione 3,0 di .NET Core, AS
 
 [!INCLUDE[JsonElement API changes](~/includes/core-changes/corefx/3.0/jsonelement-api-changes.md)]
 
+***
+
 ## <a name="cryptography"></a>Crittografia
+
+- [Il valore predefinito di EnvelopedCms è AES-256 Encryption](#envelopedcms-defaults-to-aes-256-encryption)
+- [Dimensioni minime per la generazione della chiave RSAOpenSsl aumentata](#minimum-size-for-rsaopenssl-key-generation-has-increased)
+- [.NET Core 3,0 preferisce OpenSSL 1.1. x a OpenSSL 1.0. x](#net-core-30-prefers-openssl-11x-to-openssl-10x)
+- [Migliore convalida degli argomenti nel costruttore Pkcs8PrivateKeyInfo](#better-argument-validation-in-the-pkcs8privatekeyinfo-constructor)
 
 [!INCLUDE[EnvelopedCms defaults to AES-256 encryption](~/includes/core-changes/cryptography/3.0/envelopedcms-defaults-to-aes256.md)]
 
@@ -281,18 +355,47 @@ Se si esegue la migrazione dalla versione 2,2 alla versione 3,0 di .NET Core, AS
 
 [!INCLUDE[Better argument validation in the Pkcs8PrivateKeyInfo constructor](~/includes/core-changes/cryptography/3.0/better-argument-validation-in-pkcs8privatekeyinfo-ctor.md)]
 
+***
+
 ## <a name="entity-framework-core"></a>Entity Framework Core
 
 [Entity Framework Core modifiche di rilievo](/ef/core/what-is-new/ef-core-3.0/breaking-changes)
 
 ## <a name="globalization"></a>Globalizzazione
 
+- [Le impostazioni locali "C" sono mappate alle impostazioni locali invariabili](#c-locale-maps-to-the-invariant-locale)
+
 [!INCLUDE["C" locale maps to the invariant locale](~/includes/core-changes/globalization/3.0/c-locale-maps-to-invariant-locale.md)]
+
+***
 
 ## <a name="networking"></a>Funzionalità di rete di
 
+- [Il valore predefinito di HttpRequestMessage. Version è stato modificato in 1,1](#default-value-of-httprequestmessageversion-changed-to-11)
+
 [!INCLUDE[Default value of HttpRequestMessage.Version changed to 1.1](~/includes/core-changes/networking/3.0/httprequestmessage-version-change.md)]
+
+***
 
 ## <a name="visual-basic"></a>Visual Basic -
 
+- [Tipi nello spazio dei nomi Microsoft. VisualBasic. ApplicationServices non disponibile](#types-in-microsoftvisualbasicapplicationservices-namespace-not-available)
+- [Tipi nello spazio dei nomi Microsoft. VisualBasic. Devices non disponibile](#types-in-microsoftvisualbasicdevices-namespace-not-available)
+- [Tipi nello spazio dei nomi Microsoft. VisualBasic. MyServices non disponibili](#types-in-microsoftvisualbasicmyservices-namespace-not-available)
+- [Microsoft. VisualBasic. Constants. vbNewLine è obsoleto](#microsoftvisualbasicconstantsvbnewline-is-obsolete)
+
+[!INCLUDE[Types in Microsoft.VisualBasic.ApplicationServices namespace not available](~/includes/core-changes/visualbasic/3.0/microsoft.visualbasic.applicationservices-unavailable.md)]
+
+***
+
+[!INCLUDE[Types in Microsoft.VisualBasic.Devices namespace not available](~/includes/core-changes/visualbasic/3.0/microsoft.visualbasic.devices-unavailable.md)]
+
+***
+
+[!INCLUDE[Types in Microsoft.VisualBasic.MyServices namespace not available](~/includes/core-changes/visualbasic/3.0/microsoft.visualbasic.myservices-unavailable.md)]
+
+***
+
 [!INCLUDE[vbNewLine is obsolete](~/includes/core-changes/visualbasic/3.0/vbnewline-is-obsolete.md)]
+
+***
