--- a/docs/csharp/language-reference/compiler-messages/cs0165.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0165.md
@@ -6,22 +6,24 @@ f1_keywords:
 helpviewer_keywords:
 - CS0165
 ms.assetid: e7eb7c90-af16-4734-b747-214030696975
-ms.openlocfilehash: 2100aeffe1e5c7f41cb3b3e69c44bced7564e6de
-ms.sourcegitcommit: 7e2128d4a4c45b4274bea3b8e5760d4694569ca1
+ms.openlocfilehash: 33fc49abed6dfc03c1c42c767f1ffd89b4bf86d2
+ms.sourcegitcommit: ed3f926b6cdd372037bbcc214dc8f08a70366390
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 01/14/2020
-ms.locfileid: "75936906"
+ms.lasthandoff: 01/16/2020
+ms.locfileid: "76115816"
 ---
 # <a name="compiler-error-cs0165"></a>Errore del compilatore CS0165
+
 Uso della variabile locale non assegnata "name"  
   
- Il compilatore C# non consente l'uso di variabili non inizializzate. Se tramite il compilatore viene rilevato l'utilizzo di una variabile che potrebbe non essere stata inizializzata, viene generato l'errore di compilazione CS0165. Per altre informazioni, vedere [Campi](../../programming-guide/classes-and-structs/fields.md). Si noti che questo errore viene generato quando il compilatore rileva un costrutto che potrebbe comportare l'uso di una variabile non assegnata, anche se non è usata nel codice specifico. Questo evita la necessità di regole eccessivamente complesse per l'assegnazione definita.  
+Il C# compilatore non consente l'uso di variabili non inizializzate. Se tramite il compilatore viene rilevato l'utilizzo di una variabile che potrebbe non essere stata inizializzata, viene generato l'errore di compilazione CS0165. Per altre informazioni, vedere [Campi](../../programming-guide/classes-and-structs/fields.md). Questo errore viene generato quando il compilatore rileva un costrutto che potrebbe comportare l'uso di una variabile non assegnata, anche se il codice specifico non lo è. In questo modo si evita la necessità di regole troppo complesse per l'assegnazione definita.  
   
- Per altre informazioni, vedere [Why does a recursive lambda cause a definite assignment error?](https://docs.microsoft.com/archive/blogs/ericlippert/why-does-a-recursive-lambda-cause-a-definite-assignment-error) (Perché un'espressione lambda ricorsiva causa un errore di assegnazione definita?).  
+Per altre informazioni, vedere [Why does a recursive lambda cause a definite assignment error?](https://docs.microsoft.com/archive/blogs/ericlippert/why-does-a-recursive-lambda-cause-a-definite-assignment-error) (Perché un'espressione lambda ricorsiva causa un errore di assegnazione definita?).  
   
 ## <a name="example"></a>Esempio  
- L'esempio seguente genera l'errore CS0165:  
+
+L'esempio seguente genera l'errore CS0165:  
   
 ```csharp  
 // CS0165.cs  
@@ -73,7 +75,8 @@ class MyClass2
 ```  
   
 ## <a name="example"></a>Esempio  
- L'errore di compilazione CS0165 può verificarsi nelle definizioni di delegati ricorsivi. È possibile evitare l'errore definendo il delegato in due istruzioni in modo da non utilizzare la variabile prima che venga inizializzata. Nell'esempio seguente viene illustrato l'errore e la risoluzione.  
+
+L'errore di compilazione CS0165 può verificarsi nelle definizioni di delegati ricorsivi. È possibile evitare l'errore definendo il delegato in due istruzioni in modo da non utilizzare la variabile prima che venga inizializzata. Nell'esempio seguente viene illustrato l'errore e la risoluzione.  
   
 ```csharp  
 class Program  
