--- a/docs/core/compatibility/2.0-2.1.md
+++ b/docs/core/compatibility/2.0-2.1.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, versione da 2,0 a 2,1-.NET Core
 description: Elenca le modifiche di rilievo dalla versione 2,0 alla versione 2,1 di .NET Core.
 ms.date: 12/17/2019
-ms.openlocfilehash: d879fd34e387ef05b39396437e8a96236bd48967
-ms.sourcegitcommit: 30a558d23e3ac5a52071121a52c305c85fe15726
+ms.openlocfilehash: 344cdc4d29910f265a5f9a15491222b011056969
+ms.sourcegitcommit: ed3f926b6cdd372037bbcc214dc8f08a70366390
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 12/25/2019
-ms.locfileid: "75443540"
+ms.lasthandoff: 01/16/2020
+ms.locfileid: "76116517"
 ---
 # <a name="breaking-changes-for-migration-from-version-20-to-21"></a>Modifiche di rilievo per la migrazione dalla versione 2,0 alla 2,1
 
@@ -15,4 +15,8 @@ Se si esegue la migrazione dalla versione 2,0 alla versione 2,1 di .NET Core, le
 
 ## <a name="corefx"></a>CoreFx
 
-[!INCLUDE[Instantiate struct](~/includes/core-changes/corefx/2.1/instantiate-struct.md)]
+- [Campi privati aggiunti ai tipi struct predefiniti](#private-fields-added-to-built-in-struct-types)
+
+[!INCLUDE[Private fields added to built-in struct types](~/includes/core-changes/corefx/2.1/instantiate-struct.md)]
+
+***
