--- a/docs/csharp/language-reference/compiler-messages/cs0246.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0246.md
@@ -6,19 +6,20 @@ f1_keywords:
 helpviewer_keywords:
 - CS0246
 ms.assetid: 4948fae2-2cc0-4ce4-b98c-ea69a8120b71
-ms.openlocfilehash: 3f1dd239313210a7a759b608e8450da04d46a519
-ms.sourcegitcommit: 7e2128d4a4c45b4274bea3b8e5760d4694569ca1
+ms.openlocfilehash: f52a4374f8443053b35cd03e72200274bc3efe94
+ms.sourcegitcommit: ed3f926b6cdd372037bbcc214dc8f08a70366390
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 01/14/2020
-ms.locfileid: "75936887"
+ms.lasthandoff: 01/16/2020
+ms.locfileid: "76115750"
 ---
 # <a name="compiler-error-cs0246"></a>Errore del compilatore CS0246
+
 Il nome di tipo o di spazio dei nomi 'type/namespace' non è stato trovato. Probabilmente manca una direttiva using o un riferimento all'assembly.  
   
- Non è stato trovato un tipo o uno spazio dei nomi usato nel programma. Si potrebbe non aver fatto riferimento ([-reference](../compiler-options/reference-compiler-option.md)) all'assembly che contiene il tipo oppure la [direttiva using](../keywords/using-directive.md) necessaria potrebbe non essere stata aggiunta.  In alternativa, potrebbe esserci un problema con l'assembly cui si intende fare riferimento.  
+Non è stato trovato un tipo o uno spazio dei nomi usato nel programma. Si potrebbe non aver fatto riferimento ([-reference](../compiler-options/reference-compiler-option.md)) all'assembly che contiene il tipo oppure la [direttiva using](../keywords/using-directive.md) necessaria potrebbe non essere stata aggiunta.  In alternativa, potrebbe esserci un problema con l'assembly cui si intende fare riferimento.  
   
- Le situazioni seguenti possono provocare l'errore del compilatore CS0246.  
+Le situazioni seguenti possono provocare l'errore del compilatore CS0246.  
   
 - Il nome del tipo o dello spazio dei nomi non è stato digitato correttamente. Senza il nome corretto, il compilatore non può trovare la definizione per il tipo o per lo spazio dei nomi. Questo problema è spesso dovuto al fatto che il nome è stato specificato con maiuscole o minuscole non corrette. Ad esempio, `Dataset ds;` genera l'errore CS0246 perché la "s" in Dataset deve essere maiuscola.  
   
@@ -44,11 +45,11 @@ Il nome di tipo o di spazio dei nomi 'type/namespace' non è stato trovato. Prob
     using myAliasName2 = System.Collections.Generic.List<int>;  
     ```  
   
-     Se si ottiene questo errore in un frammento di codice che prima funzionava, cercare prima di tutto eventuali riferimenti mancanti o non risolti in Esplora soluzioni. È necessario reinstallare un pacchetto [NuGet](https://www.nuget.org/). Per informazioni sul modo in cui il sistema di compilazione cerca i riferimenti, vedere l'articolo sulla [risoluzione di riferimenti a file in Team Build](https://docs.microsoft.com/archive/blogs/manishagarwal/resolving-file-references-in-team-build-part-2). Se tutti i riferimenti sembrano corretti, esaminare la cronologia del controllo del codice sorgente per individuare che cosa è cambiato nel file con estensione csproj e/o nel file di origine locale.  
+     Se si ottiene questo errore in un frammento di codice che prima funzionava, cercare prima di tutto eventuali riferimenti mancanti o non risolti in Esplora soluzioni. È necessario reinstallare un pacchetto [NuGet](https://www.nuget.org/) ? Per informazioni sul modo in cui il sistema di compilazione cerca i riferimenti, vedere l'articolo sulla [risoluzione di riferimenti a file in Team Build](https://docs.microsoft.com/archive/blogs/manishagarwal/resolving-file-references-in-team-build-part-2). Se tutti i riferimenti sembrano corretti, esaminare la cronologia del controllo del codice sorgente per individuare che cosa è cambiato nel file con estensione csproj e/o nel file di origine locale.  
   
      Se non è stato ancora possibile accedere correttamente al riferimento, usare Visualizzatore oggetti per esaminare l'assembly che dovrebbe contenere lo spazio dei nomi e verificare che questo sia effettivamente presente. Se si verifica in Visualizzatore oggetti che l'assembly contiene lo spazio dei nomi, provare a rimuovere la direttiva `using` e controllare se vi sono altre interruzioni nel codice. Il problema principale potrebbe essere provocato da un altro tipo in un assembly diverso.  
   
- L'esempio seguente genera l'errore CS0246 perché manca una direttiva `using` necessaria.  
+L'esempio seguente genera l'errore CS0246 perché manca una direttiva `using` necessaria.  
   
 ```csharp  
 // CS0246.cs  
@@ -70,7 +71,7 @@ public class MyClass
 }  
 ```  
   
- L'esempio seguente provoca l'errore CS0246 perché è stato usato un oggetto di tipo `Type` in un punto in cui è previsto l'uso di un tipo effettivo.  
+L'esempio seguente provoca l'errore CS0246 perché è stato usato un oggetto di tipo `Type` in un punto in cui è previsto l'uso di un tipo effettivo.  
   
 ```csharp  
 // CS0246b.cs  
