commit bilingual contents

--- a/docs/core/compatibility/3.0-3.1.md
+++ b/docs/core/compatibility/3.0-3.1.md
@@ -2,25 +2,34 @@
 title: Modifiche di rilievo, versione da 3,0 a 3,1-.NET Core
 description: Elenca le modifiche di rilievo dalla versione 3,0 alla versione 3,1 di .NET Core, ASP.NET Core e EF Core.
 ms.date: 11/25/2019
-ms.openlocfilehash: 080b1a4ac8480c5e78eba2103faaa7095dfdc843
-ms.sourcegitcommit: 79a2d6a07ba4ed08979819666a0ee6927bbf1b01
+ms.openlocfilehash: 3c2c802eb79a828f66a450c30fe4abeaea83fc83
+ms.sourcegitcommit: ed3f926b6cdd372037bbcc214dc8f08a70366390
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 11/28/2019
-ms.locfileid: "74568333"
+ms.lasthandoff: 01/16/2020
+ms.locfileid: "76116485"
 ---
-# <a name="breaking-changes-for-migration-from-version-30-to-31"></a><span data-ttu-id="08dc9-103">Modifiche di rilievo per la migrazione dalla versione 3,0 alla 3,1</span><span class="sxs-lookup"><span data-stu-id="08dc9-103">Breaking changes for migration from version 3.0 to 3.1</span></span>
+# <a name="breaking-changes-for-migration-from-version-30-to-31"></a><span data-ttu-id="e121b-103">Modifiche di rilievo per la migrazione dalla versione 3,0 alla 3,1</span><span class="sxs-lookup"><span data-stu-id="e121b-103">Breaking changes for migration from version 3.0 to 3.1</span></span>
 
-<span data-ttu-id="08dc9-104">Se si esegue la migrazione dalla versione 3,0 alla versione 3,1 di .NET Core, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="08dc9-104">If you're migrating from version 3.0 to version 3.1 of .NET Core, ASP.NET Core, or EF Core, the breaking changes listed in this article may affect your app.</span></span>
+<span data-ttu-id="e121b-104">Se si esegue la migrazione dalla versione 3,0 alla versione 3,1 di .NET Core, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="e121b-104">If you're migrating from version 3.0 to version 3.1 of .NET Core, ASP.NET Core, or EF Core, the breaking changes listed in this article may affect your app.</span></span>
 
-## <a name="aspnet-core"></a><span data-ttu-id="08dc9-105">ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="08dc9-105">ASP.NET Core</span></span>
+## <a name="aspnet-core"></a><span data-ttu-id="e121b-105">ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="e121b-105">ASP.NET Core</span></span>
+
+- [<span data-ttu-id="e121b-106">HTTP: browser navigava sullostesso sito modifiche che influiscano sull'autenticazione</span><span class="sxs-lookup"><span data-stu-id="e121b-106">HTTP: Browser SameSite changes impact authentication</span></span>](#http-browser-samesite-changes-impact-authentication)
 
 [!INCLUDE[HTTP: Browser SameSite changes impact authentication](~/includes/core-changes/aspnetcore/3.1/http-cookie-samesite-authn-impacts.md)]
 
-## <a name="windows-forms"></a><span data-ttu-id="08dc9-106">Windows Form</span><span class="sxs-lookup"><span data-stu-id="08dc9-106">Windows Forms</span></span>
+***
+
+## <a name="windows-forms"></a><span data-ttu-id="e121b-107">Windows Form</span><span class="sxs-lookup"><span data-stu-id="e121b-107">Windows Forms</span></span>
+
+- [<span data-ttu-id="e121b-108">Controlli rimossi</span><span class="sxs-lookup"><span data-stu-id="e121b-108">Removed controls</span></span>](#removed-controls)
+- [<span data-ttu-id="e121b-109">Evento CellFormatting non generato se viene visualizzata la descrizione comando</span><span class="sxs-lookup"><span data-stu-id="e121b-109">CellFormatting event not raised if tooltip is shown</span></span>](#cellformatting-event-not-raised-if-tooltip-is-shown)
 
 [!INCLUDE[Removed controls](~/includes/core-changes/windowsforms/3.1/remove-controls-3.1.md)]
 
 ***
 
 [!INCLUDE[CellFormatting event](~/includes/core-changes/windowsforms/3.1/cellformatting-event-not-raised.md)]
+
+***
