--- a/docs/csharp/language-reference/compiler-messages/cs0165.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0165.md
@@ -6,22 +6,24 @@ f1_keywords:
 helpviewer_keywords:
 - CS0165
 ms.assetid: e7eb7c90-af16-4734-b747-214030696975
-ms.openlocfilehash: 2100aeffe1e5c7f41cb3b3e69c44bced7564e6de
-ms.sourcegitcommit: 7e2128d4a4c45b4274bea3b8e5760d4694569ca1
+ms.openlocfilehash: 33fc49abed6dfc03c1c42c767f1ffd89b4bf86d2
+ms.sourcegitcommit: ed3f926b6cdd372037bbcc214dc8f08a70366390
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 01/14/2020
-ms.locfileid: "75936906"
+ms.lasthandoff: 01/16/2020
+ms.locfileid: "76115816"
 ---
-# <a name="compiler-error-cs0165"></a><span data-ttu-id="7dcc4-102">Errore del compilatore CS0165</span><span class="sxs-lookup"><span data-stu-id="7dcc4-102">Compiler Error CS0165</span></span>
-<span data-ttu-id="7dcc4-103">Uso della variabile locale non assegnata "name"</span><span class="sxs-lookup"><span data-stu-id="7dcc4-103">Use of unassigned local variable 'name'</span></span>  
+# <a name="compiler-error-cs0165"></a><span data-ttu-id="464d5-102">Errore del compilatore CS0165</span><span class="sxs-lookup"><span data-stu-id="464d5-102">Compiler Error CS0165</span></span>
+
+<span data-ttu-id="464d5-103">Uso della variabile locale non assegnata "name"</span><span class="sxs-lookup"><span data-stu-id="464d5-103">Use of unassigned local variable 'name'</span></span>  
   
- <span data-ttu-id="7dcc4-104">Il compilatore C# non consente l'uso di variabili non inizializzate.</span><span class="sxs-lookup"><span data-stu-id="7dcc4-104">The C# compiler does not allow the use of uninitialized variables.</span></span> <span data-ttu-id="7dcc4-105">Se tramite il compilatore viene rilevato l'utilizzo di una variabile che potrebbe non essere stata inizializzata, viene generato l'errore di compilazione CS0165.</span><span class="sxs-lookup"><span data-stu-id="7dcc4-105">If the compiler detects the use of a variable that might not have been initialized, it generates compiler error CS0165.</span></span> <span data-ttu-id="7dcc4-106">Per altre informazioni, vedere [Campi](../../programming-guide/classes-and-structs/fields.md).</span><span class="sxs-lookup"><span data-stu-id="7dcc4-106">For more information, see [Fields](../../programming-guide/classes-and-structs/fields.md).</span></span> <span data-ttu-id="7dcc4-107">Si noti che questo errore viene generato quando il compilatore rileva un costrutto che potrebbe comportare l'uso di una variabile non assegnata, anche se non è usata nel codice specifico.</span><span class="sxs-lookup"><span data-stu-id="7dcc4-107">Note that this error is generated when the compiler encounters a construct that might result in the use of an unassigned variable, even if your particular code does not.</span></span> <span data-ttu-id="7dcc4-108">Questo evita la necessità di regole eccessivamente complesse per l'assegnazione definita.</span><span class="sxs-lookup"><span data-stu-id="7dcc4-108">This avoids the necessity of overly-complex rules for definite assignment.</span></span>  
+<span data-ttu-id="464d5-104">Il C# compilatore non consente l'uso di variabili non inizializzate.</span><span class="sxs-lookup"><span data-stu-id="464d5-104">The C# compiler doesn't allow the use of uninitialized variables.</span></span> <span data-ttu-id="464d5-105">Se tramite il compilatore viene rilevato l'utilizzo di una variabile che potrebbe non essere stata inizializzata, viene generato l'errore di compilazione CS0165.</span><span class="sxs-lookup"><span data-stu-id="464d5-105">If the compiler detects the use of a variable that might not have been initialized, it generates compiler error CS0165.</span></span> <span data-ttu-id="464d5-106">Per altre informazioni, vedere [Campi](../../programming-guide/classes-and-structs/fields.md).</span><span class="sxs-lookup"><span data-stu-id="464d5-106">For more information, see [Fields](../../programming-guide/classes-and-structs/fields.md).</span></span> <span data-ttu-id="464d5-107">Questo errore viene generato quando il compilatore rileva un costrutto che potrebbe comportare l'uso di una variabile non assegnata, anche se il codice specifico non lo è.</span><span class="sxs-lookup"><span data-stu-id="464d5-107">This error is generated when the compiler encounters a construct that might result in the use of an unassigned variable, even if your particular code does not.</span></span> <span data-ttu-id="464d5-108">In questo modo si evita la necessità di regole troppo complesse per l'assegnazione definita.</span><span class="sxs-lookup"><span data-stu-id="464d5-108">This avoids the necessity of overly complex rules for definite assignment.</span></span>  
   
- <span data-ttu-id="7dcc4-109">Per altre informazioni, vedere [Why does a recursive lambda cause a definite assignment error?](https://docs.microsoft.com/archive/blogs/ericlippert/why-does-a-recursive-lambda-cause-a-definite-assignment-error) (Perché un'espressione lambda ricorsiva causa un errore di assegnazione definita?).</span><span class="sxs-lookup"><span data-stu-id="7dcc4-109">For more information, see [Why does a recursive lambda cause a definite assignment error?](https://docs.microsoft.com/archive/blogs/ericlippert/why-does-a-recursive-lambda-cause-a-definite-assignment-error).</span></span>  
+<span data-ttu-id="464d5-109">Per altre informazioni, vedere [Why does a recursive lambda cause a definite assignment error?](https://docs.microsoft.com/archive/blogs/ericlippert/why-does-a-recursive-lambda-cause-a-definite-assignment-error) (Perché un'espressione lambda ricorsiva causa un errore di assegnazione definita?).</span><span class="sxs-lookup"><span data-stu-id="464d5-109">For more information, see [Why does a recursive lambda cause a definite assignment error?](https://docs.microsoft.com/archive/blogs/ericlippert/why-does-a-recursive-lambda-cause-a-definite-assignment-error).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="7dcc4-110">Esempio</span><span class="sxs-lookup"><span data-stu-id="7dcc4-110">Example</span></span>  
- <span data-ttu-id="7dcc4-111">L'esempio seguente genera l'errore CS0165:</span><span class="sxs-lookup"><span data-stu-id="7dcc4-111">The following sample generates CS0165:</span></span>  
+## <a name="example"></a><span data-ttu-id="464d5-110">Esempio</span><span class="sxs-lookup"><span data-stu-id="464d5-110">Example</span></span>  
+
+<span data-ttu-id="464d5-111">L'esempio seguente genera l'errore CS0165:</span><span class="sxs-lookup"><span data-stu-id="464d5-111">The following sample generates CS0165:</span></span>  
   
 ```csharp  
 // CS0165.cs  
@@ -72,8 +74,9 @@ class MyClass2
 }  
 ```  
   
-## <a name="example"></a><span data-ttu-id="7dcc4-112">Esempio</span><span class="sxs-lookup"><span data-stu-id="7dcc4-112">Example</span></span>  
- <span data-ttu-id="7dcc4-113">L'errore di compilazione CS0165 può verificarsi nelle definizioni di delegati ricorsivi.</span><span class="sxs-lookup"><span data-stu-id="7dcc4-113">Compiler error CS0165 can occur in recursive delegate definitions.</span></span> <span data-ttu-id="7dcc4-114">È possibile evitare l'errore definendo il delegato in due istruzioni in modo da non utilizzare la variabile prima che venga inizializzata.</span><span class="sxs-lookup"><span data-stu-id="7dcc4-114">You can avoid the error by defining the delegate in two statements so that the variable is not used before it is initialized.</span></span> <span data-ttu-id="7dcc4-115">Nell'esempio seguente viene illustrato l'errore e la risoluzione.</span><span class="sxs-lookup"><span data-stu-id="7dcc4-115">The following example demonstrates the error and the resolution.</span></span>  
+## <a name="example"></a><span data-ttu-id="464d5-112">Esempio</span><span class="sxs-lookup"><span data-stu-id="464d5-112">Example</span></span>  
+
+<span data-ttu-id="464d5-113">L'errore di compilazione CS0165 può verificarsi nelle definizioni di delegati ricorsivi.</span><span class="sxs-lookup"><span data-stu-id="464d5-113">Compiler error CS0165 can occur in recursive delegate definitions.</span></span> <span data-ttu-id="464d5-114">È possibile evitare l'errore definendo il delegato in due istruzioni in modo da non utilizzare la variabile prima che venga inizializzata.</span><span class="sxs-lookup"><span data-stu-id="464d5-114">You can avoid the error by defining the delegate in two statements so that the variable is not used before it is initialized.</span></span> <span data-ttu-id="464d5-115">Nell'esempio seguente viene illustrato l'errore e la risoluzione.</span><span class="sxs-lookup"><span data-stu-id="464d5-115">The following example demonstrates the error and the resolution.</span></span>  
   
 ```csharp  
 class Program  
