commit translated contents

--- a/docs/core/compatibility/2.2-3.0.md
+++ b/docs/core/compatibility/2.2-3.0.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, dalla versione 2,2 alla 3,0
 description: Elenca le modifiche di rilievo dalla versione 2,2 alla versione 3,0 di .NET Core, ASP.NET Core e EF Core.
 ms.date: 01/10/2020
-ms.openlocfilehash: bfadb4f4988d9f579bc68ec105b3941bf07c7f2d
-ms.sourcegitcommit: 011314e0c8eb4cf4a11d92078f58176c8c3efd2d
+ms.openlocfilehash: 2c9f7a72b00824cc3bbcecf53262a9229d3e0869
+ms.sourcegitcommit: 700ea803fb06c5ce98de017c7f76463ba33ff4a9
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/09/2020
-ms.locfileid: "77093253"
+ms.lasthandoff: 02/19/2020
+ms.locfileid: "77451890"
 ---
 # <a name="breaking-changes-for-migration-from-version-22-to-30"></a>Modifiche di rilievo per la migrazione dalla versione 2,2 alla 3,0
 
@@ -281,6 +281,7 @@ Se si esegue la migrazione dalla versione 2,2 alla versione 3,0 di .NET Core, AS
 - [Firma di JsonFactoryConverter. CreateConverter modificata](#jsonfactoryconvertercreateconverter-signature-changed)
 - [ZipArchiveEntry non gestisce più gli archivi con dimensioni di voce incoerenti](#ziparchiveentry-no-longer-handles-archives-with-inconsistent-entry-sizes)
 - [Modifiche all'API jsonelement](#jsonelement-api-changes)
+- [FieldInfo. SetValue genera un'eccezione per i campi statici di sola inizializzazione](#fieldinfosetvalue-throws-exception-for-static-init-only-fields)
 
 [!INCLUDE[APIs that report version now report product and not file version](~/includes/core-changes/corefx/3.0/version-information-changes.md)]
 
@@ -334,6 +335,10 @@ Se si esegue la migrazione dalla versione 2,2 alla versione 3,0 di .NET Core, AS
 
 ***
 
+[!INCLUDE [FieldInfo.SetValue throws exception for static, init-only fields](~/includes/core-changes/corefx/3.0/fieldinfo-setvalue-exception.md)]
+
+***
+
 ## <a name="cryptography"></a>Crittografia
 
 - [Il valore predefinito di EnvelopedCms è AES-256 Encryption](#envelopedcms-defaults-to-aes-256-encryption)
@@ -366,6 +371,14 @@ Se si esegue la migrazione dalla versione 2,2 alla versione 3,0 di .NET Core, AS
 - [Le impostazioni locali "C" sono mappate alle impostazioni locali invariabili](#c-locale-maps-to-the-invariant-locale)
 
 [!INCLUDE["C" locale maps to the invariant locale](~/includes/core-changes/globalization/3.0/c-locale-maps-to-invariant-locale.md)]
+
+***
+
+## <a name="msbuild"></a>MSBuild
+
+- [Modifica del nome del file manifesto della risorsa](#resource-manifest-file-names)
+
+[!INCLUDE[Resource file names](~/includes/core-changes/msbuild/3.0/resource-manifest-name.md)]
 
 ***
 
