--- a/docs/csharp/misc/cs0028.md
+++ b/docs/csharp/misc/cs0028.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS0028
 ms.assetid: 47df919f-01fa-45ae-a4b7-912445e679e2
-ms.openlocfilehash: b8a86f204d2101ce3ea9c8b9010e14b592c4edcb
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: 52507e57e1917977d7f3e0753aea81ef63327fa6
+ms.sourcegitcommit: 700ea803fb06c5ce98de017c7f76463ba33ff4a9
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69601699"
+ms.lasthandoff: 02/19/2020
+ms.locfileid: "77451798"
 ---
-# <a name="compiler-warning-level-4-cs0028"></a><span data-ttu-id="7325b-102">Avviso del compilatore (livello 4) CS0028</span><span class="sxs-lookup"><span data-stu-id="7325b-102">Compiler Warning (level 4) CS0028</span></span>
-<span data-ttu-id="7325b-103">'function declaration' non può essere un punto di ingresso perché la firma è errata</span><span class="sxs-lookup"><span data-stu-id="7325b-103">'function declaration' has the wrong signature to be an entry point</span></span>  
+# <a name="compiler-warning-level-4-cs0028"></a><span data-ttu-id="c21fc-102">Avviso del compilatore (livello 4) CS0028</span><span class="sxs-lookup"><span data-stu-id="c21fc-102">Compiler Warning (level 4) CS0028</span></span>
+<span data-ttu-id="c21fc-103">'function declaration' non può essere un punto di ingresso perché la firma è errata</span><span class="sxs-lookup"><span data-stu-id="c21fc-103">'function declaration' has the wrong signature to be an entry point</span></span>  
   
- <span data-ttu-id="7325b-104">La dichiarazione del metodo per `Main` non era valida: è stato dichiarato con una firma non valida.</span><span class="sxs-lookup"><span data-stu-id="7325b-104">The method declaration for `Main` was invalid: it was declared with an invalid signature.</span></span> <span data-ttu-id="7325b-105">`Main` deve essere dichiarato come statico e deve restituire [int](../language-reference/builtin-types/integral-numeric-types.md) o [void](../language-reference/keywords/void.md).</span><span class="sxs-lookup"><span data-stu-id="7325b-105">`Main` must be declared as static and it must return either [int](../language-reference/builtin-types/integral-numeric-types.md) or [void](../language-reference/keywords/void.md).</span></span> <span data-ttu-id="7325b-106">Per ulteriori informazioni, vedere [Main () e argomenti della riga di comando](../programming-guide/main-and-command-args/index.md).</span><span class="sxs-lookup"><span data-stu-id="7325b-106">For more information, see [Main() and Command-Line Arguments](../programming-guide/main-and-command-args/index.md).</span></span>  
+ <span data-ttu-id="c21fc-104">La dichiarazione del metodo per `Main` non era valida: è stato dichiarato con una firma non valida.</span><span class="sxs-lookup"><span data-stu-id="c21fc-104">The method declaration for `Main` was invalid: it was declared with an invalid signature.</span></span> <span data-ttu-id="c21fc-105">`Main` deve essere dichiarato come statico e deve restituire [int](../language-reference/builtin-types/integral-numeric-types.md) o [void](../language-reference/builtin-types/void.md).</span><span class="sxs-lookup"><span data-stu-id="c21fc-105">`Main` must be declared as static and it must return either [int](../language-reference/builtin-types/integral-numeric-types.md) or [void](../language-reference/builtin-types/void.md).</span></span> <span data-ttu-id="c21fc-106">Per ulteriori informazioni, vedere [Main () e argomenti della riga di comando](../programming-guide/main-and-command-args/index.md).</span><span class="sxs-lookup"><span data-stu-id="c21fc-106">For more information, see [Main() and Command-Line Arguments](../programming-guide/main-and-command-args/index.md).</span></span>  
   
- <span data-ttu-id="7325b-107">L'esempio seguente genera l'errore CS0028:</span><span class="sxs-lookup"><span data-stu-id="7325b-107">The following sample generates CS0028:</span></span>  
+ <span data-ttu-id="c21fc-107">L'esempio seguente genera l'errore CS0028:</span><span class="sxs-lookup"><span data-stu-id="c21fc-107">The following sample generates CS0028:</span></span>  
   
 ```csharp  
 // CS0028.cs  
