--- a/docs/csharp/misc/cs0547.md
+++ b/docs/csharp/misc/cs0547.md
@@ -6,21 +6,21 @@ f1_keywords:
 helpviewer_keywords:
 - CS0547
 ms.assetid: aa80873f-deb0-4ff2-8435-92a626bb5b80
-ms.openlocfilehash: 27f4f9c7a28a58fc264e60ddc0311695308deccd
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: fa9f908f3bf339d0deae7e218971c8aabc7ee5ae
+ms.sourcegitcommit: 700ea803fb06c5ce98de017c7f76463ba33ff4a9
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69610587"
+ms.lasthandoff: 02/19/2020
+ms.locfileid: "77451629"
 ---
-# <a name="compiler-error-cs0547"></a><span data-ttu-id="97402-102">Errore del compilatore CS0547</span><span class="sxs-lookup"><span data-stu-id="97402-102">Compiler Error CS0547</span></span>
-<span data-ttu-id="97402-103">'property': la proprietà o l'indicizzatore non può avere un tipo void</span><span class="sxs-lookup"><span data-stu-id="97402-103">'property' : property or indexer cannot have void type</span></span>  
+# <a name="compiler-error-cs0547"></a><span data-ttu-id="10b23-102">Errore del compilatore CS0547</span><span class="sxs-lookup"><span data-stu-id="10b23-102">Compiler Error CS0547</span></span>
+<span data-ttu-id="10b23-103">'property': la proprietà o l'indicizzatore non può avere un tipo void</span><span class="sxs-lookup"><span data-stu-id="10b23-103">'property' : property or indexer cannot have void type</span></span>  
   
- <span data-ttu-id="97402-104">[void](../language-reference/keywords/void.md) non è valido come valore restituito per una proprietà.</span><span class="sxs-lookup"><span data-stu-id="97402-104">[void](../language-reference/keywords/void.md) is invalid as a return value for a property.</span></span>  
+ <span data-ttu-id="10b23-104">[void](../language-reference/builtin-types/void.md) non è valido come valore restituito per una proprietà.</span><span class="sxs-lookup"><span data-stu-id="10b23-104">[void](../language-reference/builtin-types/void.md) is invalid as a return value for a property.</span></span>  
   
- <span data-ttu-id="97402-105">Per altre informazioni, vedere [Proprietà](../programming-guide/classes-and-structs/properties.md).</span><span class="sxs-lookup"><span data-stu-id="97402-105">For more information, see [Properties](../programming-guide/classes-and-structs/properties.md).</span></span>  
+ <span data-ttu-id="10b23-105">Per altre informazioni, vedere [Proprietà](../programming-guide/classes-and-structs/properties.md).</span><span class="sxs-lookup"><span data-stu-id="10b23-105">For more information, see [Properties](../programming-guide/classes-and-structs/properties.md).</span></span>  
   
- <span data-ttu-id="97402-106">L'esempio seguente genera l'errore CS0547:</span><span class="sxs-lookup"><span data-stu-id="97402-106">The following sample generates CS0547:</span></span>  
+ <span data-ttu-id="10b23-106">L'esempio seguente genera l'errore CS0547:</span><span class="sxs-lookup"><span data-stu-id="10b23-106">The following sample generates CS0547:</span></span>  
   
 ```csharp  
 // CS0547.cs  
