--- a/docs/csharp/language-reference/compiler-messages/cs0151.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0151.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS0151
 ms.assetid: 1adda08b-6be5-46c8-96f9-5ac7c7bfe48c
-ms.openlocfilehash: 16fd1f0b0350d4db1c3846d3ebd1931a363d7b29
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
-ms.translationtype: HT
+ms.openlocfilehash: 0e401dcdd3cd0fce1d8d62110f9617c0f47f3c12
+ms.sourcegitcommit: 700ea803fb06c5ce98de017c7f76463ba33ff4a9
+ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69608137"
+ms.lasthandoff: 02/19/2020
+ms.locfileid: "77451967"
 ---
 # <a name="compiler-error-cs0151"></a>Errore del compilatore CS0151
 
@@ -54,7 +54,7 @@ public class MyClass
 
 ## <a name="example-of-void-method"></a>Esempio di un metodo void
 
-La chiamata a un metodo [void](../keywords/void.md) in un'espressione di ricerca [switch](../keywords/switch.md) genera l'errore CS0151. È possibile risolvere l'errore chiamando un metodo che restituisce un tipo integrale, ad esempio [int](../builtin-types/integral-numeric-types.md) o [long](../builtin-types/integral-numeric-types.md).
+La chiamata a un metodo [void](../builtin-types/void.md) in un'espressione di ricerca [switch](../keywords/switch.md) genera l'errore CS0151. È possibile risolvere l'errore chiamando un metodo che restituisce un tipo integrale, ad esempio [int](../builtin-types/integral-numeric-types.md) o [long](../builtin-types/integral-numeric-types.md).
 
 ```csharp
 class C
