commit bilingual contents

--- a/docs/csharp/language-reference/compiler-messages/cs0151.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0151.md
@@ -6,22 +6,22 @@ f1_keywords:
 helpviewer_keywords:
 - CS0151
 ms.assetid: 1adda08b-6be5-46c8-96f9-5ac7c7bfe48c
-ms.openlocfilehash: 16fd1f0b0350d4db1c3846d3ebd1931a363d7b29
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
-ms.translationtype: HT
+ms.openlocfilehash: 0e401dcdd3cd0fce1d8d62110f9617c0f47f3c12
+ms.sourcegitcommit: 700ea803fb06c5ce98de017c7f76463ba33ff4a9
+ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69608137"
+ms.lasthandoff: 02/19/2020
+ms.locfileid: "77451967"
 ---
-# <a name="compiler-error-cs0151"></a><span data-ttu-id="5e080-102">Errore del compilatore CS0151</span><span class="sxs-lookup"><span data-stu-id="5e080-102">Compiler Error CS0151</span></span>
+# <a name="compiler-error-cs0151"></a><span data-ttu-id="b0d19-102">Errore del compilatore CS0151</span><span class="sxs-lookup"><span data-stu-id="b0d19-102">Compiler Error CS0151</span></span>
 
-<span data-ttu-id="5e080-103">È previsto un valore di tipo integrale</span><span class="sxs-lookup"><span data-stu-id="5e080-103">A value of an integral type expected</span></span>
+<span data-ttu-id="b0d19-103">È previsto un valore di tipo integrale</span><span class="sxs-lookup"><span data-stu-id="b0d19-103">A value of an integral type expected</span></span>
 
-<span data-ttu-id="5e080-104">È stata usata una variabile in una situazione in cui era richiesto un tipo di dati integrale.</span><span class="sxs-lookup"><span data-stu-id="5e080-104">A variable was used in a situation where an integral data type was required.</span></span> <span data-ttu-id="5e080-105">Per altre informazioni, vedere [Tipi](../../programming-guide/types/index.md).</span><span class="sxs-lookup"><span data-stu-id="5e080-105">For more information, see [Types](../../programming-guide/types/index.md).</span></span>
+<span data-ttu-id="b0d19-104">È stata usata una variabile in una situazione in cui era richiesto un tipo di dati integrale.</span><span class="sxs-lookup"><span data-stu-id="b0d19-104">A variable was used in a situation where an integral data type was required.</span></span> <span data-ttu-id="b0d19-105">Per altre informazioni, vedere [Tipi](../../programming-guide/types/index.md).</span><span class="sxs-lookup"><span data-stu-id="b0d19-105">For more information, see [Types](../../programming-guide/types/index.md).</span></span>
 
-## <a name="example-of-ambiguous-conversion"></a><span data-ttu-id="5e080-106">Esempio di conversione ambigua</span><span class="sxs-lookup"><span data-stu-id="5e080-106">Example of ambiguous conversion</span></span>
+## <a name="example-of-ambiguous-conversion"></a><span data-ttu-id="b0d19-106">Esempio di conversione ambigua</span><span class="sxs-lookup"><span data-stu-id="b0d19-106">Example of ambiguous conversion</span></span>
 
-<span data-ttu-id="5e080-107">Questo errore può verificarsi quando non viene eseguita alcuna conversione o se le conversioni implicite disponibili generano una situazione ambigua.</span><span class="sxs-lookup"><span data-stu-id="5e080-107">This error can occur when there is no conversion or if the available implicit conversions result in an ambiguous situation.</span></span> <span data-ttu-id="5e080-108">L'esempio seguente genera l'errore CS0151:</span><span class="sxs-lookup"><span data-stu-id="5e080-108">The following example generates CS0151:</span></span>
+<span data-ttu-id="b0d19-107">Questo errore può verificarsi quando non viene eseguita alcuna conversione o se le conversioni implicite disponibili generano una situazione ambigua.</span><span class="sxs-lookup"><span data-stu-id="b0d19-107">This error can occur when there is no conversion or if the available implicit conversions result in an ambiguous situation.</span></span> <span data-ttu-id="b0d19-108">L'esempio seguente genera l'errore CS0151:</span><span class="sxs-lookup"><span data-stu-id="b0d19-108">The following example generates CS0151:</span></span>
 
 ```csharp
 public class MyClass
@@ -52,9 +52,9 @@ public class MyClass
 }
 ```
 
-## <a name="example-of-void-method"></a><span data-ttu-id="5e080-109">Esempio di un metodo void</span><span class="sxs-lookup"><span data-stu-id="5e080-109">Example of void method</span></span>
+## <a name="example-of-void-method"></a><span data-ttu-id="b0d19-109">Esempio di un metodo void</span><span class="sxs-lookup"><span data-stu-id="b0d19-109">Example of void method</span></span>
 
-<span data-ttu-id="5e080-110">La chiamata a un metodo [void](../keywords/void.md) in un'espressione di ricerca [switch](../keywords/switch.md) genera l'errore CS0151.</span><span class="sxs-lookup"><span data-stu-id="5e080-110">A [void](../keywords/void.md) method invocation in a [switch](../keywords/switch.md) match expression generates CS0151.</span></span> <span data-ttu-id="5e080-111">È possibile risolvere l'errore chiamando un metodo che restituisce un tipo integrale, ad esempio [int](../builtin-types/integral-numeric-types.md) o [long](../builtin-types/integral-numeric-types.md).</span><span class="sxs-lookup"><span data-stu-id="5e080-111">You can fix the error by calling a method that returns an integral type such as [int](../builtin-types/integral-numeric-types.md) or [long](../builtin-types/integral-numeric-types.md) instead.</span></span>
+<span data-ttu-id="b0d19-110">La chiamata a un metodo [void](../builtin-types/void.md) in un'espressione di ricerca [switch](../keywords/switch.md) genera l'errore CS0151.</span><span class="sxs-lookup"><span data-stu-id="b0d19-110">A [void](../builtin-types/void.md) method invocation in a [switch](../keywords/switch.md) match expression generates CS0151.</span></span> <span data-ttu-id="b0d19-111">È possibile risolvere l'errore chiamando un metodo che restituisce un tipo integrale, ad esempio [int](../builtin-types/integral-numeric-types.md) o [long](../builtin-types/integral-numeric-types.md).</span><span class="sxs-lookup"><span data-stu-id="b0d19-111">You can fix the error by calling a method that returns an integral type such as [int](../builtin-types/integral-numeric-types.md) or [long](../builtin-types/integral-numeric-types.md) instead.</span></span>
 
 ```csharp
 class C
