--- a/docs/csharp/misc/cs0620.md
+++ b/docs/csharp/misc/cs0620.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS0620
 ms.assetid: cadd7156-0c3c-460b-844b-c9bbfb8f62df
-ms.openlocfilehash: 5cb29445e38674455328973dc84aa9324047bf2d
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: 58408d89c6939f6aa68c42ce127c0bd2023f16a6
+ms.sourcegitcommit: 700ea803fb06c5ce98de017c7f76463ba33ff4a9
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69610367"
+ms.lasthandoff: 02/19/2020
+ms.locfileid: "77448597"
 ---
-# <a name="compiler-error-cs0620"></a><span data-ttu-id="76c20-102">Errore del compilatore CS0620</span><span class="sxs-lookup"><span data-stu-id="76c20-102">Compiler Error CS0620</span></span>
-<span data-ttu-id="76c20-103">Gli indicizzatori non possono avere tipi void</span><span class="sxs-lookup"><span data-stu-id="76c20-103">Indexers cannot have void type</span></span>  
+# <a name="compiler-error-cs0620"></a><span data-ttu-id="72cc5-102">Errore del compilatore CS0620</span><span class="sxs-lookup"><span data-stu-id="72cc5-102">Compiler Error CS0620</span></span>
+<span data-ttu-id="72cc5-103">Gli indicizzatori non possono avere tipi void</span><span class="sxs-lookup"><span data-stu-id="72cc5-103">Indexers cannot have void type</span></span>  
   
- <span data-ttu-id="76c20-104">Il tipo restituito di [indexer](../programming-guide/indexers/index.md) non può essere `void`.</span><span class="sxs-lookup"><span data-stu-id="76c20-104">The return type of an [indexer](../programming-guide/indexers/index.md) cannot be `void`.</span></span> <span data-ttu-id="76c20-105">Un indicizzatore deve restituire un valore.</span><span class="sxs-lookup"><span data-stu-id="76c20-105">An indexer must return a value.</span></span>  
+ <span data-ttu-id="72cc5-104">Il tipo restituito di [indexer](../programming-guide/indexers/index.md) non può essere `void`.</span><span class="sxs-lookup"><span data-stu-id="72cc5-104">The return type of an [indexer](../programming-guide/indexers/index.md) cannot be `void`.</span></span> <span data-ttu-id="72cc5-105">Un indicizzatore deve restituire un valore.</span><span class="sxs-lookup"><span data-stu-id="72cc5-105">An indexer must return a value.</span></span>  
   
- <span data-ttu-id="76c20-106">L'esempio seguente genera l'errore CS0620:</span><span class="sxs-lookup"><span data-stu-id="76c20-106">The following sample generates CS0620:</span></span>  
+ <span data-ttu-id="72cc5-106">L'esempio seguente genera l'errore CS0620:</span><span class="sxs-lookup"><span data-stu-id="72cc5-106">The following sample generates CS0620:</span></span>  
   
 ```csharp  
 // CS0620.cs  
@@ -40,6 +40,6 @@ class MyClass
 }  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="76c20-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="76c20-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="72cc5-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="72cc5-107">See also</span></span>
 
-- [<span data-ttu-id="76c20-108">void</span><span class="sxs-lookup"><span data-stu-id="76c20-108">void</span></span>](../language-reference/keywords/void.md)
+- [<span data-ttu-id="72cc5-108">void</span><span class="sxs-lookup"><span data-stu-id="72cc5-108">void</span></span>](../language-reference/builtin-types/void.md)
