--- a/docs/csharp/misc/cs0670.md
+++ b/docs/csharp/misc/cs0670.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS0670
 ms.assetid: 59379171-284f-4d55-8741-af6a97879abc
-ms.openlocfilehash: 3c10790c63ce07b447670f465131fdc6218ccca7
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: bd1c8a7e4138bb105b674f6b1f43367927a4013a
+ms.sourcegitcommit: 700ea803fb06c5ce98de017c7f76463ba33ff4a9
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69610175"
+ms.lasthandoff: 02/19/2020
+ms.locfileid: "77448604"
 ---
-# <a name="compiler-error-cs0670"></a><span data-ttu-id="4b18b-102">Errore del compilatore CS0670</span><span class="sxs-lookup"><span data-stu-id="4b18b-102">Compiler Error CS0670</span></span>
-<span data-ttu-id="4b18b-103">Il campo non può essere di tipo void</span><span class="sxs-lookup"><span data-stu-id="4b18b-103">Field cannot have void type</span></span>  
+# <a name="compiler-error-cs0670"></a><span data-ttu-id="305d7-102">Errore del compilatore CS0670</span><span class="sxs-lookup"><span data-stu-id="305d7-102">Compiler Error CS0670</span></span>
+<span data-ttu-id="305d7-103">Il campo non può essere di tipo void</span><span class="sxs-lookup"><span data-stu-id="305d7-103">Field cannot have void type</span></span>  
   
- <span data-ttu-id="4b18b-104">Il tipo di un campo è stato dichiarato come [void](../language-reference/keywords/void.md).</span><span class="sxs-lookup"><span data-stu-id="4b18b-104">A field was declared to be of type [void](../language-reference/keywords/void.md).</span></span>  
+ <span data-ttu-id="305d7-104">Il tipo di un campo è stato dichiarato come [void](../language-reference/builtin-types/void.md).</span><span class="sxs-lookup"><span data-stu-id="305d7-104">A field was declared to be of type [void](../language-reference/builtin-types/void.md).</span></span>  
   
- <span data-ttu-id="4b18b-105">L'esempio seguente genera l'errore CS0670:</span><span class="sxs-lookup"><span data-stu-id="4b18b-105">The following sample generates CS0670:</span></span>  
+ <span data-ttu-id="305d7-105">L'esempio seguente genera l'errore CS0670:</span><span class="sxs-lookup"><span data-stu-id="305d7-105">The following sample generates CS0670:</span></span>  
   
 ```csharp  
 // CS0670.cs  
