--- a/docs/csharp/misc/cs1536.md
+++ b/docs/csharp/misc/cs1536.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS1536
 ms.assetid: 65f14fbb-df79-4759-8911-93f8f90f5a60
-ms.openlocfilehash: b513f2e1a069983dd4c6ca6989d1f65557955d6d
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: 26270485675136076740f0d54a4ef5f803a90c60
+ms.sourcegitcommit: 700ea803fb06c5ce98de017c7f76463ba33ff4a9
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69608792"
+ms.lasthandoff: 02/19/2020
+ms.locfileid: "77452032"
 ---
-# <a name="compiler-error-cs1536"></a><span data-ttu-id="cf480-102">Errore del compilatore CS1536</span><span class="sxs-lookup"><span data-stu-id="cf480-102">Compiler Error CS1536</span></span>
-<span data-ttu-id="cf480-103">Tipo parametro void non è valido</span><span class="sxs-lookup"><span data-stu-id="cf480-103">Invalid parameter type void</span></span>  
+# <a name="compiler-error-cs1536"></a><span data-ttu-id="7a666-102">Errore del compilatore CS1536</span><span class="sxs-lookup"><span data-stu-id="7a666-102">Compiler Error CS1536</span></span>
+<span data-ttu-id="7a666-103">Tipo parametro void non è valido</span><span class="sxs-lookup"><span data-stu-id="7a666-103">Invalid parameter type void</span></span>  
   
- <span data-ttu-id="cf480-104">Non è necessario o non è valido specificare un parametro [void](../language-reference/keywords/void.md) diverso da un puntatore void.</span><span class="sxs-lookup"><span data-stu-id="cf480-104">It is not necessary or valid to specify a [void](../language-reference/keywords/void.md) parameter other than a void pointer.</span></span>  
+ <span data-ttu-id="7a666-104">Non è necessario o non è valido specificare un parametro [void](../language-reference/builtin-types/void.md) diverso da un puntatore void.</span><span class="sxs-lookup"><span data-stu-id="7a666-104">It is not necessary or valid to specify a [void](../language-reference/builtin-types/void.md) parameter other than a void pointer.</span></span>  
   
- <span data-ttu-id="cf480-105">L'esempio seguente genera l'errore CS1536:</span><span class="sxs-lookup"><span data-stu-id="cf480-105">The following sample generates CS1536:</span></span>  
+ <span data-ttu-id="7a666-105">L'esempio seguente genera l'errore CS1536:</span><span class="sxs-lookup"><span data-stu-id="7a666-105">The following sample generates CS1536:</span></span>  
   
 ```csharp  
 // CS1536.cs  
